--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build:ui": "rm -rf build && cd ../../part2/phonebook && npm run build --prod && cp -r build ../../part3/phonebook-backend",
-    "deploy": "git push heroku master",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail",
-    "lint": "eslint .",
+    "ui": "cd client && yarn start",
+    "build": "cd client && rm -rf build && yarn build",
+    "lint": "eslint . && cd client && yarn lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Layth Barzangi",
