--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "ui": "cd client && yarn start",
+    "install:full": "yarn install && cd client && yarn install",
     "build": "cd client && rm -rf build && yarn build",
     "lint": "eslint . && cd client && yarn lint",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test jest --verbose --runInBand",
+    "cypress:open": "cypress open",
+    "test:e2e": "cypress run"
   },
   "author": "Layth Barzangi",
   "license": "MIT",
@@ -22,7 +25,15 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "cypress": "^6.4.0",
     "eslint": "^6.6.0",
-    "nodemon": "^2.0.4"
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-jest": "^24.1.3",
+    "jest": "24.9.0",
+    "nodemon": "^2.0.4",
+    "supertest": "^6.1.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
